apps/microservices-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onlineboutique
  labels:
    app.kubernetes.io/component: onlineboutique
