apps/microservices-demo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onlineboutique-httproute
  namespace: onlineboutique
spec:
  parentRefs:
    - name: mdch-lab-gateway
      namespace: cilium
  hostnames:
    - "online-boutique.mdch-lab.dev"
  rules:
    - backendRefs:
      - name: frontend
        port: 80
